--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,15 @@
 {
-  "name": "Calculadora de Función Diastólica - ASE 2025",
-  "short_name": "Función Diastólica",
+  "name": "Calculadora de Función Diastólica",
+  "short_name": "Diastólica",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
-  "background_color": "#b7d0e8",
+  "background_color": "#ffffff",
   "theme_color": "#3a5a7a",
-  "description": "Calculadora interactiva para evaluación de función diastólica según guías ASE 2025.",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "icons/icon-192-maskable.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+    { "src": "icons/icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ]
 }
