--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-  "name": "Calculadora de Función Diastólica",
-  "short_name": "Diastólica",
+  "id": "calculadora-diastolica",
+  "name": "Calculadora de Función Diastólica (ASE 2025)",
+  "short_name": "Diastólica ASE",
+  "description": "Calculadora de función diastólica basada en ASE 2025. Uso educativo; no reemplaza el juicio clínico.",
+  "lang": "es",
   "start_url": ".",
   "scope": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#b7d0e8",
   "theme_color": "#3a5a7a",
+  "categories": ["medical", "education", "productivity"],
   "icons": [
-    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any" },
     { "src": "icons/icon-192-maskable.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
     { "src": "icons/icon-512-maskable.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
-  ]
+  ],
+  "prefer_related_applications": false
 }
